Doubleclick to rename not working in UI_Lists in popovers (e.g., grease pencil /annotations layers renaming) #66286

Closed
opened 2019-07-01 00:07:51 +02:00 by Hoang Duy Tran · 17 comments
Member

Blender Version
Blender 2.81, 2.82, ...
Worked: ?

Short description of error
Unable to rename grease pencil layer when tooltip says: 'Active layer index, Double click to rename.'

Exact steps for others to reproduce the error

  • Go to either '2D Full Canvas' or ' 2D Animation',
  • Add a blank Grease Pencil,
  • Change mode to Draw
  • Drag the header bar to left to review 'Layer:'
  • Click the down arrow to show the layer's panel
  • Press + there to add a new layer
  • Select either old or new layer and while leaving mouse pointer hover over it, you should see a tooltip 'Active layer index, Double click to rename.' Try to double click on it and 'NOTHING HAPPENS'.
  • In 2D Animation layout you can access the 'Properties' panel on the left and rename there, in 2D Full canvas, you'll have to split window, creating a new one, change it to Properties before you can do the 'RENAME'.

Screenshot for ' 2D Full canvas' layout, rename is IMPOSSIBLE:
Screenshot from 2019-06-30 22-19-40.png

Screenshot for '2D Animation' layout, rename is IMPOSSIBLE:
Screenshot from 2019-06-30 22-41-07.png

Screenshot for the same control in Properties panel, where RENAME is possible:
Screenshot from 2019-06-30 22-41-42.png

**Blender Version** Blender 2.81, 2.82, ... Worked: ? **Short description of error** Unable to rename grease pencil layer when tooltip says: 'Active layer index, Double click to rename.' **Exact steps for others to reproduce the error** - Go to either '2D Full Canvas' or ' 2D Animation', - Add a blank Grease Pencil, - Change mode to Draw - Drag the header bar to left to review 'Layer:' - Click the down arrow to show the layer's panel - Press + there to add a new layer - Select either old or new layer and while leaving mouse pointer hover over it, you should see a tooltip 'Active layer index, Double click to rename.' Try to double click on it and 'NOTHING HAPPENS'. - In 2D Animation layout you can access the 'Properties' panel on the left and rename there, in 2D Full canvas, you'll have to split window, creating a new one, change it to Properties before you can do the 'RENAME'. Screenshot for ' 2D Full canvas' layout, rename is IMPOSSIBLE: ![Screenshot from 2019-06-30 22-19-40.png](https://archive.blender.org/developer/F7557708/Screenshot_from_2019-06-30_22-19-40.png) Screenshot for '2D Animation' layout, rename is IMPOSSIBLE: ![Screenshot from 2019-06-30 22-41-07.png](https://archive.blender.org/developer/F7557711/Screenshot_from_2019-06-30_22-41-07.png) Screenshot for the same control in Properties panel, where RENAME is possible: ![Screenshot from 2019-06-30 22-41-42.png](https://archive.blender.org/developer/F7557713/Screenshot_from_2019-06-30_22-41-42.png)
Author
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk

#99539 was marked as duplicate of this issue

#99539 was marked as duplicate of this issue

#99243 was marked as duplicate of this issue

#99243 was marked as duplicate of this issue

#98636 was marked as duplicate of this issue

#98636 was marked as duplicate of this issue

#97167 was marked as duplicate of this issue

#97167 was marked as duplicate of this issue

#68536 was marked as duplicate of this issue

#68536 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Seems to be an issue with UI_Lists in popovers [which dont take the doubleclick then, CTRL+clicking to rename still works...].
This is TOPBAR_PT_gpencil_layers, Same is true for TOPBAR_PT_gpencil_materials.

Seems to be an issue with UI_Lists in popovers [which dont take the doubleclick then, CTRL+clicking to rename still works...]. This is `TOPBAR_PT_gpencil_layers`, Same is true for `TOPBAR_PT_gpencil_materials`.
Philipp Oeser changed title from Grease Pencil, unable to renaming layer to Grease Pencil, unable to renaming layer [issue with doubleclick not working in UI_Lists in popovers] 2019-07-01 12:47:47 +02:00
Campbell Barton was assigned by Philipp Oeser 2019-07-01 13:17:13 +02:00

Added subscriber: @inspectaTech

Added subscriber: @inspectaTech

I can rename layer in 2D Animation, but not with the dropdown panel in 2d Full Canvas mode. (i just downloaded the program on 7/29/2019)

I can rename layer in 2D Animation, but not with the dropdown panel in 2d Full Canvas mode. (i just downloaded the program on 7/29/2019)
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:33:55 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Dalai Felinto changed title from Grease Pencil, unable to renaming layer [issue with doubleclick not working in UI_Lists in popovers] to Doubleclick not working in UI_Lists in popovers (e.g., grease pencil layers renaming) 2020-01-23 16:45:32 +01:00
Member
Added subscribers: @sch.alexis, @ChristophWerner, @JacquesLucke, @dark999, @ChristopherAnderssarian, @antoniov
Member

Added subscriber: @RobLop-3

Added subscriber: @RobLop-3
Member

Added subscriber: @Traveler

Added subscriber: @Traveler
Philipp Oeser changed title from Doubleclick not working in UI_Lists in popovers (e.g., grease pencil layers renaming) to Doubleclick not working in UI_Lists in popovers (e.g., grease pencil /annotations layers renaming) 2022-06-07 09:50:27 +02:00
Member

Added subscribers: @JulienKaspar, @PratikPB2123

Added subscribers: @JulienKaspar, @PratikPB2123
Member

Added subscribers: @PMA33, @deadpin, @OmarEmaraDev

Added subscribers: @PMA33, @deadpin, @OmarEmaraDev
Philipp Oeser removed the
Interest
User Interface
label 2023-02-10 09:25:33 +01:00
Philipp Oeser changed title from Doubleclick not working in UI_Lists in popovers (e.g., grease pencil /annotations layers renaming) to Doubleclick to rename not working in UI_Lists in popovers (e.g., grease pencil /annotations layers renaming) 2023-11-01 09:28:51 +01:00
Philipp Oeser added
Severity
Normal
and removed
Severity
Low
labels 2023-11-01 09:28:58 +01:00
Member

I will check on this.

I will check on this.
Philipp Oeser self-assigned this 2023-11-01 09:34:27 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-07 10:11:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66286
No description provided.